--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "coverage": "nyc npm test && nyc report --reporter=lcov",
     "doc": "typedoc",
     "test": "mocha",
-    "start": "tsc-watch --onSuccess \"node dist/index.js\""
+    "start": "tsc-watch --onSuccess \"node dist/PE102/program.js\""
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,8 @@
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.25",
+    "@types/node": "^17.0.26",
+    "@types/yargs": "^17.0.10",
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0",
@@ -25,7 +26,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "chalk": "^5.0.1",
+    "chalk": "^4.1.2",
     "yargs": "^17.4.1"
   }
 }
