--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "coverage": "nyc npm test && nyc report --reporter=lcov",
     "doc": "typedoc",
     "test": "mocha",
-    "start": "tsc-watch --onSuccess \"node dist/PE102/program.js\""
+    "start": "tsc-watch --onSuccess \"node dist/Ejercicio_1/ejercicio_1.js\""
   },
   "keywords": [],
   "author": "",
